2000-10-11  Lauris Kaplinski  <lauris@helixcode.com>

	* src/draw-context.c (sp_draw_context-destroy): Detach signal

2000-10-11  Frederic Devernay <Frederic.Devernay@sophia.inria.fr>

	* Makefile.am: Use test -r for compatibility

	* src/Makefile.am: Remove -export-dynamic

	* src/main.c: Use libxml 1.8.8/2.0

	* src/interface.c: Make fake_dialogs nonstatic

	* src/xml/repr-io.c: Use libxml 1.8.8/2.0

2000-10-09  Lauris Kaplinski  <lauris@helixcode.com>

	* configure.in: Version 0.20

	* src/helper/unit-menu.*: New convenience object

	* src/desktop.c (sp_desktop_destroy): Destroy first eventcontext,
	then selection

	* src/draw-context.c: Make silent

	* src/file.c (sp_file_import_ok): Use "xlink:href" for images

	* src/sp-image.c (sp_image_read_attr): Use "xlink:href"
	(sp_image_repr_read_image): Ditto

	* src/svg/svg.h: Use bitfield for units

2000-10-08  Lauris Kaplinski  <lauris@helixcode.com>

	* src/dialogs/object-properties.c: Do not keep CSS objects, so
	fill & stroke do not overwrite each other settings

2000-10-08  Frank Felfe  <innerspace@iname.com>

	* glade/align.glade: Improvements

	* glade/object_props.glade: New layout

	* src/sp-ruler.*: New files, implementing wrapper for Gtk rulers

	* src/sp-metrics.*: Default metrics, ruler metrics

	* src/desktop.c (sp_desktop_init): use ruler wrappers
	
2000-10-07  Lauris Kaplinski  <lauris@helixcode.com>

	* src/desktop.c (sp_desktop_realize): Zoom to page on first display

	* src/document-undo.c (sp_document_done): Limit undo to 128 levels

	* src/document.c (sp_document_new): Set docbase & docname before
	creating object tree

	* src/sp-image.c (sp_image_repr_read_image): Find right root repr

	* src/sp-shape.c (sp_shape_paint): Use right stroke width

	* src/dialogs/export.c (sp_export_do_export): use ::paint() method

	* src/xml/repr-io.c (sp_repr_svg_read_node): Return on comment and text
	nodes

	* src/xml/repr.c (sp_repr_document): Implement

2000-10-06  Lauris Kaplinski  <lauris@helixcode.com>
